<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Following">
    <ImageView
        android:id="@+id/settings"
        android:layout_width="48dp"
        android:layout_height="48dp"

        app:srcCompat="@drawable/baseline_settings_24"
        android:layout_marginTop="16dp"
        android:layout_marginStart="350dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:onClick="personalization"
        android:contentDescription="@string/account_settings"/>

    <ImageView
        android:id="@+id/updates"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="294dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="updates"
        android:padding="8dp"
        app:srcCompat="@drawable/baseline_fiber_new_24"
        android:contentDescription="@string/updates"/>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/your_live_channels"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck"
        android:padding="8dp"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:src="@drawable/hs1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:onClick="next"
        android:contentDescription="@string/hearthstone"/>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="110dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/rdulive"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crazy_gameplay"
        android:layout_marginStart="166dp"
        android:layout_marginTop="138dp"
        android:textSize="14sp"

        android:gravity="center_horizontal"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hearthstone"
        android:layout_marginStart="166dp"
        android:layout_marginTop="165dp"
        android:textSize="14sp"

        android:gravity="center_horizontal"
        android:padding="8dp"/>
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:src="@drawable/pubg1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        android:contentDescription="@string/pubg_battlegrounds"
        android:onClick="next"/>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="210dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/ceh9"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playing_games_and_chatting"
        android:layout_marginStart="166dp"
        android:layout_marginTop="238dp"
        android:textSize="14sp"

        android:gravity="center_horizontal"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pubg_battlegrounds"
        android:layout_marginStart="166dp"
        android:layout_marginTop="265dp"
        android:textSize="14sp"

        android:gravity="center_horizontal"
        android:padding="8dp"/>
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:src="@drawable/dota1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="320dp"
        android:onClick="next"/>
    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belonytv"
        android:layout_marginStart="166dp"
        android:layout_marginTop="310dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_hard_in_dota"
        android:layout_marginStart="166dp"
        android:layout_marginTop="338dp"
        android:textSize="14sp"

        android:gravity="center_horizontal"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dota_2"
        android:layout_marginStart="166dp"
        android:layout_marginTop="365dp"
        android:textSize="14sp"

        android:gravity="center_horizontal"
        android:padding="8dp"/>
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:src="@drawable/asd"
        android:layout_marginStart="16dp"
        android:layout_marginTop="420dp"
        android:onClick="next"
        android:contentDescription="@string/just_chatting"/>
    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kaktusoidka"
        android:layout_marginStart="166dp"
        android:layout_marginTop="410dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watching_film"
        android:layout_marginStart="166dp"
        android:layout_marginTop="438dp"
        android:textSize="14sp"

        android:gravity="center_horizontal"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/just_chatting"
        android:layout_marginStart="166dp"
        android:layout_marginTop="465dp"
        android:textSize="14sp"

        android:gravity="center_horizontal"
        android:padding="8dp"/>
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:src="@drawable/cs1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="520dp"
        android:onClick="next"
        android:contentDescription="@string/counter_strike"/>
    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1mpala"
        android:layout_marginStart="166dp"
        android:layout_marginTop="510dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catching_cheaters"
        android:layout_marginStart="166dp"
        android:layout_marginTop="538dp"
        android:textSize="14sp"

        android:gravity="center_horizontal"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_strike"
        android:layout_marginStart="166dp"
        android:layout_marginTop="565dp"
        android:textSize="14sp"

        android:gravity="center_horizontal"
        android:padding="8dp"/>
</FrameLayout>