<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Browse"
    tools:ignore="ExtraText">
    <ImageView
        android:id="@+id/settings"
        android:layout_width="48dp"
        android:layout_height="48dp"

        app:srcCompat="@drawable/baseline_settings_24"
        android:layout_marginTop="16dp"
        android:layout_marginStart="350dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:onClick="personalization"/>

    <ImageView
        android:id="@+id/updates"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="294dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="updates"
        android:padding="8dp"
        app:srcCompat="@drawable/baseline_fiber_new_24" />
    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:tag="@string/categories"
        android:text="@string/categories"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/purple"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="55dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/chat"
        android:contentDescription="@string/just_chatting"
        />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="55dp"
        android:layout_height="75dp"
        android:src="@drawable/dota"
        android:layout_marginTop="180dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/dota_2"
        />
    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="55dp"
        android:layout_height="75dp"
        android:src="@drawable/hs"
        android:layout_marginTop="280dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/hearthstone"
        />
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="55dp"
        android:layout_height="75dp"
        android:src="@drawable/cs"
        android:layout_marginTop="380dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/counter_strike"
        />
    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="55dp"
        android:layout_height="75dp"
        android:src="@drawable/pl"
        android:layout_marginTop="480dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/politics1"
        />
    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="55dp"
        android:layout_height="75dp"
        android:src="@drawable/pubg"
        android:layout_marginTop="580dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/pubg_battlegrounds"
        />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_557_3k_viewers"
        android:layout_marginStart="87dp"
        android:layout_marginTop="112dp"

        android:textSize="14sp"
        android:padding="8dp"/>
        />
    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/just_chatting"
        android:layout_marginStart="87dp"
        android:layout_marginTop="80dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dota_2"
        android:layout_marginStart="87dp"
        android:layout_marginTop="180dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_74_4k_viewers"
        android:layout_marginStart="87dp"
        android:layout_marginTop="212dp"

        android:textSize="14sp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hearthstone"
        android:layout_marginStart="87dp"
        android:layout_marginTop="280dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_70k_viewers"
        android:layout_marginStart="87dp"
        android:layout_marginTop="312dp"
        android:textSize="14sp"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_strike"
        android:layout_marginStart="87dp"
        android:layout_marginTop="380dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_163_6k_viewers"
        android:layout_marginStart="87dp"
        android:layout_marginTop="412dp"
        android:textSize="14sp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginTop="480dp"
        android:padding="8dp"
        android:text="@string/politics1"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_2k_viewers"
        android:layout_marginStart="87dp"
        android:layout_marginTop="512dp"
        android:textSize="14sp"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pubg_battlegrounds"
        android:layout_marginStart="87dp"
        android:layout_marginTop="580dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="8dp"/>
    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_26_6k_viewers"
        android:layout_marginStart="87dp"
        android:layout_marginTop="612dp"
        android:textSize="14sp"
        android:padding="8dp"/>
</FrameLayout>