<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".two_factor"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/arrowleft"
        android:layout_margin="8dp"
        android:onClick="login"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="-40dp"
        android:text="@string/two_factor_authentication"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="24dp" />
    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/welcome_back1"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="108dp"
        android:textStyle="bold"
        android:layout_marginTop="45dp"
        />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/welcome_back"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="108dp" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"

        android:background="@drawable/outlined"
        android:ems="10"

        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:labelFor="@id/password_input1"
        android:minHeight="48dp"
        android:padding="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="DuplicateIds,DuplicateSpeakableTextCheck,LabelFor,MissingConstraints,SpeakableTextPresentCheck,TextFields,VisualLintTextFieldSize" />
    <TextView
        android:id="@+id/texttest"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autoLink="all"
        android:onClick="showNotification"
        android:text="@string/need_help"
        android:textColor="@color/purple"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword"
        android:padding="12dp"/>
    <Button
        android:id="@+id/login_button2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"

        android:backgroundTint="@color/purple"
        android:onClick="next"
        android:paddingHorizontal="24dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        tools:ignore="MissingConstraints,VisualLintButtonSize,TextContrastCheck" />



    <TextView
        android:id="@+id/texttest1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:onClick="showNotification1"
        android:text="@string/resend_code"
        android:textColor="@color/purple"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="372dp"
        android:padding="12dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"/>


</LinearLayout>